--- a/app/views/accounts/new.html.erb
+++ b/app/views/accounts/new.html.erb
@@ -6,12 +6,23 @@
   <%= f.label :name %><br />
   <%= f.text_field :name %>
 </div>
+<%= f.label "Account Type" %><br />
+
 <div class="field">
-  <%= f.label :atype, "Type" %><br />
-  <%= f.text_field :atype %>
+  <%= f.radio_button :atype, "asset"  %> 
+  <%= f.label "Asset"%> <br />
+
+  <%= f.radio_button :atype, "liability" %>
+  <%= f.label "Liability"%> <br />
+
+  <%= f.radio_button :atype, "income" %>
+  <%= f.label "Income"%> <br />
+
+  <%= f.radio_button :atype, "expense" %>
+  <%= f.label "Expense"%> <br />
 </div>
 
   <div class="actions">
-    <%= f.submit "Sign up" %>
+    <%= f.submit "Create It!" %>
   </div>  
 <% end %>
