--- a/app/views/accounts/new.html.erb
+++ b/app/views/accounts/new.html.erb
@@ -1,6 +1,9 @@
 <h1>Create an Account</h1>
 
 <%= form_for(@account) do |f| %>
+                
+
+<%= render 'shared/error_messages', :object => f.object %>
 
 <div class="field">
   <%= f.label :name %><br />
