got delete working with its own delete list page

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,3 +1,18 @@
-<h1>Spiffy Books</h1>
-<p>You are Home!</p>
-<p> <%= link_to  "Accounts" , "/accounts",%> </p>
+<table border=1>
+	<tr><td>Accounts</td><td>Transactions</td></tr>        
+  <tr>
+	<td>
+	  <%= link_to  "Chart of Accounts" , accounts_path %>       
+	</td>
+  </tr> 
+  <tr>
+	<td>
+	  <%= link_to  "Create Account" , new_account_path %>      
+	</td>
+  </tr>   
+  <tr>
+	<td>
+	  <%= link_to  "Delete Account" , '/accounts/deletelist' %>      
+	</td>
+  </tr>
+</table>
