checkin made before messing with account listing

--- a/app/views/accounts/index.html.erb
+++ b/app/views/accounts/index.html.erb
@@ -1,10 +1,9 @@
 
 
-<% if ((defined? flash[:success]) && (/Account .* created/ =~ flash[:success])) %>   
-<p> <%= link_to "Create Another Account", "accounts/new" %></p>      
-<% else %>        
-<p> <%= link_to "Create New Account", "accounts/new" %></p>      
-<% end%>
+<p> <%= link_to "Create Account", new_account_path %></p>     
+
+<h3>Accounts</h3>  
+
 
 
 <ul class="accounts">
