--- a/app/views/accounts/updatelist.html.erb
+++ b/app/views/accounts/updatelist.html.erb
@@ -1,7 +1,7 @@
 <h3>Choose an Account to Delete</h3>
 <ul class="accounts">              
 	
-	<% @accountlist_type = "delete" %>
+	<% @accountlist_type = "update" %>
 	<%= render "accountlist" %>        
 
 </ul>
