--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -10,6 +10,13 @@
 	  <%= link_to  "Create Account" , new_account_path %>      
 	</td>
   </tr>   
+</tr>   
+<tr>
+	<td>
+	  <%= link_to  "Edit Account" , '/accounts/updatelist' %>      
+	</td>
+</tr>
+
   <tr>
 	<td>
 	  <%= link_to  "Delete Account" , '/accounts/deletelist' %>      
