--- a/app/views/jes/new.html.erb
+++ b/app/views/jes/new.html.erb
@@ -1,2 +1,53 @@
-<h1>Jes#new</h1>
-<p>Find me in app/views/jes/new.html.erb</p>
+<h1>Create a Journal Entry</h1>
+
+<%= form_for(@je) do |f| %>
+                
+
+<%= render 'shared/error_messages', :object => f.object %>
+<table border=1>    
+<tr>
+ <td colspan=2>   
+<div class="field">
+  <%= f.label "Amount (in Pennies)" %><br />
+  <%= f.text_field :amount %>
+</div>
+</td>
+</tr>                
+	<tr>
+		<td>
+<%= f.label "Credit" %><br />
+   <% names = Account.select(:name).collect { |n| n.name } %>
+   <% accts = [] %>
+   <%# names.sort.each { |n| a = Account.find_by_name(n) 
+				       accts.push([ a.name.titleize, a.id ])  }   %>      
+<div class="field">
+  <%= f.select :credit,  names.sort.collect { |n| a = Account.find_by_name(n) 
+				                              [  a.name.titleize + " " + "."*(20-a.name.length) + " (#{a.atype.titleize})", a.id ]  }
+
+
+
+  %> 
+</td><td>
+<%= f.label "Debit" %><br />
+   <% names = Account.select(:name).collect { |n| n.name } %>
+   <% accts = [] %>
+   <%# names.sort.each { |n| a = Account.find_by_name(n) 
+				       accts.push([ a.name.titleize, a.id ])  }   %>      
+<div class="field">
+  <%= f.select :debit,  names.sort.collect { |n| a = Account.find_by_name(n) 
+				                              [  a.name.titleize + " " + "."*(20-a.name.length) + " (#{a.atype.titleize})", a.id ]  }
+
+
+
+  %>    
+</td></tr> 
+<tr><td>
+  <div class="actions">
+    <%= f.submit "Create It!" %>
+  </div>  
+</tr></td>   
+</table>
+</div>
+
+ 
+<% end %>
