--- a/public/stylesheets/custom.css
+++ b/public/stylesheets/custom.css
@@ -247,3 +247,10 @@ form.new_micropost textarea {
   height: 4em;
   margin-bottom: 0;
 }
+ 
+
+form.new_je select {
+  font-family:"Lucida Console", Lucida, monospace;
+  font-size: 80%;
+
+}
