--- a/app/views/jes/new.html.erb
+++ b/app/views/jes/new.html.erb
@@ -48,7 +48,11 @@
 
 	</div><!-- End demo -->
 
-
+	<script>
+	$(function() {
+		$( "#datepicker" ).datepicker();
+	});
+	</script>
 
 	<div class="demo-description">
 	<p>The datepicker is tied to a standard form input field.  Focus on the input (click, or use the tab key) to open an interactive calendar in a small overlay.  Choose a date, click elsewhere on the page (blur the input), or hit the Esc key to close. If a date is chosen, feedback is shown as the input's value.</p>
