--- a/app/views/jes/show.html.erb
+++ b/app/views/jes/show.html.erb
@@ -12,3 +12,5 @@
 
 <h3> Amount: <%= Money.new(@je.amount).format(:symbol => false) %></h3>
  
+                                                          
+<h3> Date: <%= @je.date.to_s %></h3>
