now properly captures and displays comments

--- a/app/views/jes/new.html.erb
+++ b/app/views/jes/new.html.erb
@@ -53,7 +53,14 @@ $(function() {
   <%= f.text_field :date, :id => "datepicker" %>
 
 
-	 
+</td></tr> 
+<tr><td> 
+	
+	<div class="field">
+	  <%= f.label "Comment" %><br />
+	  <%= f.text_field :comment %>
+	</div>	
+	   
 </td></tr> 
 <tr><td>
   <div class="actions">
