--- a/app/views/jes/show.html.erb
+++ b/app/views/jes/show.html.erb
@@ -14,3 +14,5 @@
  
                                                           
 <h3> Date: <%= @je.date.to_s %></h3>
+                      
+<h3>Comment: <%= @je.comment %></h3>       
