--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -3,7 +3,12 @@
   <tr>
 	<td>
 	  <%= link_to  "Chart of Accounts" , accounts_path %>       
-	</td>
+	</td> 
+	
+	<td>
+	  <%= link_to  "All Journal Entries" , jes_path %>       
+	</td>	
+	
   </tr> 
   <tr>
 	<td>
