--- a/app/views/jes/new.html.erb
+++ b/app/views/jes/new.html.erb
@@ -9,7 +9,13 @@ $(function() {
 <%= form_for(@je) do |f| %>
                 
 
-<%= render 'shared/error_messages', :object => f.object %>
+<%= link_to  "All Journal Entries" , jes_path %>
+
+
+<%= render 'shared/error_messages', :object => f.object %>    
+
+
+
 <table border=1>    
 <tr>
  <td colspan=2>   
@@ -20,6 +26,20 @@ $(function() {
 </td>
 </tr>                
 	<tr>
+<td>
+<%= f.label "Debit" %><br />
+   <% names = Account.select(:name).collect { |n| n.name } %>
+   <% accts = [] %>
+   <%# names.sort.each { |n| a = Account.find_by_name(n) 
+				       accts.push([ a.name.titleize, a.id ])  }   %>      
+<div class="field">
+  <%= f.select :debit,  names.sort.collect { |n| a = Account.find_by_name(n) 
+				                              [  a.name.titleize + " " + "."*(20-a.name.length) + " (#{a.atype.titleize})", a.id ]  }
+
+
+
+  %>
+</td> 
 		<td>
 <%= f.label "Credit" %><br />
    <% names = Account.select(:name).collect { |n| n.name } %>
@@ -33,20 +53,10 @@ $(function() {
 
 
   %> 
-</td><td>
-<%= f.label "Debit" %><br />
-   <% names = Account.select(:name).collect { |n| n.name } %>
-   <% accts = [] %>
-   <%# names.sort.each { |n| a = Account.find_by_name(n) 
-				       accts.push([ a.name.titleize, a.id ])  }   %>      
-<div class="field">
-  <%= f.select :debit,  names.sort.collect { |n| a = Account.find_by_name(n) 
-				                              [  a.name.titleize + " " + "."*(20-a.name.length) + " (#{a.atype.titleize})", a.id ]  }
+</td>
 
 
-
-  %>
-</td></tr> 
+</tr> 
 <tr><td>   
 
   <%= f.label "Date:" %><br />
