didi some css tweaks

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -1,8 +1,8 @@
 /*
 *= require_self 
-*= require reset
-*= require typography
-*= require grid
+* require reset
+* require typography
+* require grid
 *= require_tree .
 */
 
