--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,17 @@
-<table>
+
+<style type="text/css">
+
+.tr.odd {
+	background-color: white;
+}
+
+.tr.even {
+	background-color: white;
+}   
+</style>
+
+
+<table class="front_page_table">
 	<tr><td>Accounts</td><td>Journal Entries</td></tr>        
   <tr>
 	<td>
