--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -38,6 +38,9 @@
 	<td>
 	  <%= link_to  "Edit Account" , '/accounts/updatelist' %>      
 	</td>
+	<td>
+	  <%= link_to  "Edit Journal Entry" , '/jes/updatelist' %>      
+	</td>
 </tr>
 
   <tr>
