--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -47,5 +47,8 @@
 	<td>
 	  <%= link_to  "Delete Account" , '/accounts/deletelist' %>      
 	</td>
+	<td>
+	  <%= link_to  "Delete Journal Entry" , '/jes/deletelist' %>      
+	</td>	
   </tr>
 </table>
