--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -16,7 +16,7 @@ header img {
 
 section {
   margin-top: 1em;
-  font-size: 120%;
+  font-size: 80%;
   padding: 20px;
   background: #fff;
 }
@@ -220,7 +220,11 @@ div.field, div.actions {
     color: #264409;
 }
 
- 
+.money {
+  text-align: right;
+  font-family:"Lucida Console", Lucida, monospace;
+	
+} 
 
 form.new_je select {
   font-family:"Lucida Console", Lucida, monospace;
