now all account lists use books.state

--- a/app/views/accounts/_accountlist.html.erb
+++ b/app/views/accounts/_accountlist.html.erb
@@ -1,8 +1,9 @@
 <% @alist.each do |t, l|%>
   <ul class="accounts">        
     <h3> <%= t.capitalize %> </h3>
-	<% l.each do |a| %>  
-	  <li>      
+	<% l[:children].each do |c| %>
+	<% a = c[1][:obj] %>     	 
+	  <li>  
 		<% case @accountlist_type %>   
 		  <% when "delete" %>
 	        <%= link_to "Delete " + a.name.titleize, a, :method => :delete, :confirm => "You sure?",
@@ -12,8 +13,7 @@
 	     
 		  <% else %>    
 	        <%= link_to a.name.titleize, a %>		 
-		<% end %>
-		
+		<% end %>        
 	  </li>	   
 	<% end %>
 
