--- a/app/views/jes/_jelist.html.erb
+++ b/app/views/jes/_jelist.html.erb
@@ -1,8 +1,7 @@
 <script type="text/javascript" charset="utf-8"> 
 	$(document).ready(function() {
 		$('#jelist_table').dataTable({
-	        "bJQueryUI": true,
-	        "sPaginationType": "full_numbers"			
+	        "bJQueryUI": true 		
 			
 		});
 		// alert("hello")
