--- a/app/assets/stylesheets/reports.css.scss
+++ b/app/assets/stylesheets/reports.css.scss
@@ -4,5 +4,12 @@
                                     
 .report {
   font-family:"Lucida Console", Lucida, monospace;
-  color: #F00
+  color: #000 ;
+  font-size:200%;
+}          
+
+.report_heading { 
+   font-size:150%;
+   font-weight:bold;
+   
 }
