--- a/app/views/accounts/_accountlist.html.erb
+++ b/app/views/accounts/_accountlist.html.erb
@@ -12,7 +12,7 @@
 			<%= link_to "Edit " + a.name.titleize, edit_account_path(a) %>	
 	     
 		  <% else %>    
-	        <%= link_to a.name.titleize, a %>		 
+	        <%= link_to a.name.titleize, a %> <%= int_to_money(a.balance)%>		 
 		<% end %>        
 	  </li>	   
 	<% end %>
