--- a/app/views/accounts/show.html.erb
+++ b/app/views/accounts/show.html.erb
@@ -6,3 +6,5 @@
 <h1>Account: <%= @title.titleize %></h1>       
 
 <h3> Type: <%= @account.atype.titleize %></h3>
+                   
+<h3> Type: <%= @state[:balance] %></h3>
