added income statement

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -37,6 +37,10 @@
 	<td>
 	  <%= link_to  "Create Journal Entry" , new_je_path %>      
 	</td>	
+
+	<td>
+	  <%= link_to  "Income Statement" , '/reports/pandl' %>       
+	</td>
 	
   </tr>   
 </tr>   
