--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -63,7 +63,8 @@ nav ul li {
 
 nav ul li a {
   padding: 0 5px;
-  font-weight: bold;
+  font-weight: bold;        
+  font-size: 80%;
 }
 
 nav ul li a:visited {
