--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -2,9 +2,10 @@
   <%= link_to logo, root_path %>
   <nav class="round">
     <ul>
-      <li><%= link_to "Home", root_path %></li>
-      <li><%= link_to "About", about_path %></li>
-      <li><%= link_to "Contact", contact_path %></li>
+      <li><%= link_to "Home",     root_path     %></li>       
+      <li><%= link_to "Reports",  reports_path  %></li>
+      <li><%= link_to "Accounts", accounts_path %></li>
+      <li><%= link_to "Journal",  jes_path      %></li>
 
     </ul>
   </nav>
