--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -12,8 +12,16 @@
 
 
 <table class="front_page_table">
-	<tr><td>Accounts</td><td>Journal Entries</td><td>Reports</td></tr>        
+	<tr> 
+		 <td>Reports</td>
+		  <td>Accounts</td><td>Journal Entries</td></tr>        
   <tr>
+
+	<td>
+	  <%= link_to  "Balance Sheet" , '/reports/balancesheet' %>       
+	</td>	
+
+
 	<td>
 	  <%= link_to  "Chart of Accounts" , accounts_path %>       
 	</td> 
@@ -21,15 +29,14 @@
 	<td>
 	  <%= link_to  "All Journal Entries" , jes_path %>       
 	</td>	
+  </tr>  
 
-	
+
+  <tr> 
 	<td>
-	  <%= link_to  "Balance Sheet" , '/reports/balancesheet' %>       
-	</td>	
-
+	  <%= link_to  "Income Statement" , '/reports/pandl' %>       
+	</td>        	
 	
-  </tr> 
-  <tr>
 	<td>
 	  <%= link_to  "Create Account" , new_account_path %>      
 	</td>   
@@ -37,14 +44,11 @@
 	<td>
 	  <%= link_to  "Create Journal Entry" , new_je_path %>      
 	</td>	
-
+  </tr>     
+  
+<tr>      
 	<td>
-	  <%= link_to  "Income Statement" , '/reports/pandl' %>       
 	</td>
-	
-  </tr>   
-</tr>   
-<tr>
 	<td>
 	  <%= link_to  "Edit Account" , '/accounts/updatelist' %>      
 	</td>
@@ -53,7 +57,9 @@
 	</td>
 </tr>
 
-  <tr>
+  <tr> 
+	<td>
+	</td>	
 	<td>
 	  <%= link_to  "Delete Account" , '/accounts/deletelist' %>      
 	</td>
