--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -11,13 +11,14 @@
 </style>
 
 
-<table class="front_page_table">
-	<tr> 
-		 <td>Reports</td>
-		  <td>Accounts</td><td>Journal Entries</td></tr>        
+<table class="home_table">
+  <tr> 
+	<td class="home_thead">Reports</td>
+	<td class="home_thead">Accounts</td>
+	<td class="home_thead">Journal Entries</td></tr>        
   <tr>
 
-	<td>
+	<td >
 	  <%= link_to  "Balance Sheet" , '/reports/balancesheet' %>       
 	</td>	
 
