--- a/app/views/accounts/_account.html.erb
+++ b/app/views/accounts/_account.html.erb
@@ -1,5 +1,5 @@
 <li>
-  <%= link_to account.name, account %>
+  <%#= link_to account.name, account %>
   <%# if current_user.admin? %>
   <%#= link_to "delete", user, :method => :delete, :confirm => "You sure?",
                               :title => "Delete #{user.name}" %>
