--- a/app/views/reports/index.html.erb
+++ b/app/views/reports/index.html.erb
@@ -1,1 +1,4 @@
-<h1>Reports go here!<h1>
+<h1>Financial Statements</h1>       
+	
+ <p>     <%= link_to  "Balance Sheet" , '/reports/balancesheet' %>    </p>          	        
+<p>	  <%= link_to  "Income Statement" , '/reports/pandl' %>      </p>           
